--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Live AEM Training | AEM Resourcing TPL | Hire AEM Developer | Techvion</title>
+  <title>Techvion</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta name="keywords" content="Live AEM Training, digital transformation consulting, AEM Resourcing TPL, Hire AEM Developer, Digital Business Transformation">
+  <meta name="keywords" content="Techvion,IT Consulting & Support,DIGITAL TRANSFORMATION,24/7 IT Support, Digital Business Transformation">
   <meta name="description" content="Techvion is the one-stop solution for all IT-related services including AEM. Our technical experts have years of expertise in various technologies which helps us to provide end-to-end solutions.">
-  <meta property="og:title" content="Live AEM Training | AEM Resourcing TPL | Hire AEM Developer | Techvion" />
+  <meta property="og:title" content="Techvion | IT Consulting & Support | DIGITAL TRANSFORMATION | 24/7 IT Support" />
   <meta property="og:description" content="Techvion is the one-stop solution for all IT-related services including AEM. Our technical experts have years of expertise in various technologies which helps us to provide end-to-end solutions." />
   <meta content="Author" name="Theme">
 
@@ -60,7 +60,7 @@
     <div class="container">
       <div id="logo" class="header-content d-flex flex-row justify-content-between">
         <h1>
-          <a href="#body" class="scrollto"> <img src="" alt="logo" /></a>
+          <!-- <a href="#body" class="scrollto"> <img src="" alt="logo" /></a> -->
         </h1>
         <nav id="nav-menu-container">
           <ul class="nav-menu">
